# IC-2025

./: .gitignore  README.md
bit_stream/src/: CMakeLists.txt  bit_stream.cpp  dct_codec.cpp  dct_codec.h  lossy_codec.cpp  quantization.cpp  quantization.h  wav_quant_dec.cpp  wav_quant_enc.cpp
lab-work-1/bit_stream/src/: quantization.cpp  quantization.h  wav_quant_dec.cpp  wav_quant_enc.cpp
lab-work-1/sndfile-example/src/: wav_cmp.cpp  wav_hist.h
lab-work-2/src/: CMakeLists.txt  imageProcessor.cpp
sndfile-example/src/: wav_effects.cpp  wav_hist.h  wav_quant.cpp
